# focused-attention-fact

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/capability_evals/: ifeval_val.jsonl  mmlu_val.jsonl
data/patching/: jailbreaks_informative_160.jsonl  sycophancy_informative_170.jsonl
data/scripts/: build_if_dataset.py  download_capability_evals.py  prepare_jailbreaks.py  prepare_sycophancy.py  sample_informative.py
experiments/: compute_ablation_ci.py  eval_attention_invariance.py  eval_layer_loss.py  judge_final_eval.py  judge_jailbreaks.py  run_baseline.py  run_behavioral_validation.py  run_fact.py  run_final_eval.py  run_patching.py
fact/: __init__.py  capability_evals.py  data.py  evaluate.py  model.py  patching.py  training.py  utils.py
modal_app/: app.py  run_experiment.py
